crates/moss/tests/snapshots/cli_snapshots__help_sessions.snap
---
source: crates/moss/tests/cli_snapshots.rs
assertion_line: 92
expression: "snapshot_help(&[\"sessions\"])"
---
Analyze Claude Code and other agent session logs

Usage: moss sessions [OPTIONS] [COMMAND]

Commands:
  list   List sessions
  show   Show a specific session
  stats  Show aggregate statistics across sessions
  plans  List and view agent plans (from ~/.claude/plans/, etc.)
  help   Print this message or the help of the given subcommand(s)

Options:
  -r, --root <ROOT>      Root directory (defaults to current directory)
      --format <FORMAT>  Force specific format: claude, codex, gemini, moss
  -l, --limit <LIMIT>    Limit number of sessions [default: 20]
      --json             Output as JSON
      --jq <EXPR>        Filter JSON output with jq expression (implies --json)
      --pretty           Human-friendly output with colors and formatting
      --compact          Compact output without colors (overrides TTY detection)
  -h, --help             Print help
