crates/moss/tests/snapshots/cli_snapshots__help_sessions_list.snap
---
source: crates/moss/tests/cli_snapshots.rs
assertion_line: 323
expression: "snapshot_help(&[\"sessions\", \"list\"])"
---
List sessions

Usage: moss sessions list [OPTIONS]

Options:
      --grep <GREP>        Filter sessions by grep pattern (searches prompt/commands)
      --days <DAYS>        Filter sessions from the last N days
      --since <SINCE>      Filter sessions since date (YYYY-MM-DD)
      --until <UNTIL>      Filter sessions until date (YYYY-MM-DD)
      --project <PROJECT>  Filter by specific project path
  -r, --root <ROOT>        Root directory (defaults to current directory)
      --all-projects       Show sessions from all projects (not just current)
      --format <FORMAT>    Force specific format: claude, codex, gemini, moss
  -l, --limit <LIMIT>      Limit number of sessions [default: 20]
      --json               Output as JSON
      --jq <EXPR>          Filter JSON output with jq expression (implies --json)
      --pretty             Human-friendly output with colors and formatting
      --compact            Compact output without colors (overrides TTY detection)
  -h, --help               Print help
