crates/moss/tests/snapshots/cli_snapshots__help_sessions_show.snap
---
source: crates/moss/tests/cli_snapshots.rs
assertion_line: 328
expression: "snapshot_help(&[\"sessions\", \"show\"])"
---
Show a specific session

Usage: moss sessions show [OPTIONS] <SESSION>

Arguments:
  <SESSION>  Session ID or path

Options:
      --jq <JQ>          Apply jq filter to each JSONL line
  -a, --analyze          Run full analysis instead of dumping raw log
  -r, --root <ROOT>      Root directory (defaults to current directory)
      --format <FORMAT>  Force specific format: claude, codex, gemini, moss
  -l, --limit <LIMIT>    Limit number of sessions [default: 20]
      --json             Output as JSON
      --pretty           Human-friendly output with colors and formatting
      --compact          Compact output without colors (overrides TTY detection)
  -h, --help             Print help
