crates/moss/tests/snapshots/cli_snapshots__help_text_search.snap
---
source: crates/moss/tests/cli_snapshots.rs
assertion_line: 87
expression: "snapshot_help(&[\"text-search\"])"
---
Search for text patterns in files (fast ripgrep-based search)

Usage: moss text-search [OPTIONS] <PATTERN>

Arguments:
  <PATTERN>  Regex pattern to search for

Options:
  -r, --root <ROOT>        Root directory (defaults to current directory)
  -l, --limit <LIMIT>      Maximum number of matches to return
  -i, --ignore-case        Case-insensitive search
      --exclude <EXCLUDE>  Exclude files matching patterns or aliases
      --only <ONLY>        Only include files matching patterns or aliases
      --json               Output as JSON
      --jq <EXPR>          Filter JSON output with jq expression (implies --json)
      --pretty             Human-friendly output with colors and formatting
      --compact            Compact output without colors (overrides TTY detection)
  -h, --help               Print help
